Add clear local storage button

--- a/snet-status/index.html
+++ b/snet-status/index.html
@@ -24,6 +24,7 @@
         :price="queue.price"
       ></Queue>
     </div>
+    <input id="clearLocalStorage" type="button" value="Clear Local Storage" onclick="localStorage.clear();" />
 
     <script>
       Trello.authorize({
